--- a/addproduct.css
+++ b/addproduct.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background: #f9f9f6;
+  background: #f9f6f6;
   padding: 20px;
 }
 .product-wrapper {
@@ -33,17 +33,19 @@ body {
 
 .form-row {
   display: flex;
-  gap: 20px;
   align-items: center;
   justify-content: space-between;
+  gap: 12px;
 }
 
+
 .form-row label {
-  font-size: 16px;
-  margin-bottom: 6px;
+  width: 30%;
+  font-size: 15px;
   color: #4a5568;
   font-weight: 600;
 }
+
 
 .form-row input,
 .form-row select {
@@ -60,6 +62,7 @@ body {
   color: #121212c3;
 }
 
+/* Toggle Switch */
 /* Toggle Switch */
 .toggle-row {
   grid-column: span 2;
@@ -124,4 +127,17 @@ body {
   .toggle-row {
     grid-column: span 1;
   }
+}
+.add-btn {
+  background: #ff6b6b;
+  color: #fff;
+  border: none;
+  padding: 12px 18px;
+  border-radius: 8px;
+  font-size: 15px;
+  cursor: pointer;
+}
+
+.add-btn:hover {
+  background: #ff4f4f;
 }
