--- a/addproduct.css
+++ b/addproduct.css
@@ -9,6 +9,16 @@ body {
   background: #f9f6f6;
   padding: 20px;
 }
+.sidebar {
+  width: 20%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #e67e22;
+  padding: 30px 20px;
+  box-shadow: 2px 0 12px rgba(0,0,0,0.1);
+}
 .product-wrapper {
   width: 80%;
   margin-left: 20%;
@@ -61,8 +71,12 @@ body {
 .form-row input::placeholder {
   color: #121212c3;
 }
+a {
+  text-decoration: none;
+  color: inherit;
+}
 
-/* Toggle Switch */
+
 /* Toggle Switch */
 .toggle-row {
   grid-column: span 2;
@@ -104,7 +118,7 @@ body {
 }
 
 .switch input:checked + .slider {
-  background: #00a884;
+  background: #e67e22;
 }
 
 .switch input:checked + .slider::before {
@@ -129,7 +143,7 @@ body {
   }
 }
 .add-btn {
-  background: #ff6b6b;
+  background: #102937;
   color: #fff;
   border: none;
   padding: 12px 18px;
@@ -139,5 +153,5 @@ body {
 }
 
 .add-btn:hover {
-  background: #ff4f4f;
+  background:#167ebb;
 }
